# SSD-Labs-Innopolis

./: CMakeLists.txt  README.md  main.cpp
Lab4/: lab4.cpp  lab4.h
Landlord/: landlord.cpp  landlord.h  main.cpp
lab1/: Lab1.cpp  Lab1.h  Lab1Header.h
lab2/: lab2.cpp  lab2.h
lab2/student/: exerciseOne.cpp  exerciseOne.hpp  exerciseTwo.cpp  exerciseTwo.hpp  mainSt.cpp
lab3/: lab3.cpp  lab3.h
lab5/landlordSolution/: LandlordSolution.cpp  LandlordSolution.h
lab5/landlordTemplate/: LandlordTemplate.cpp  LandlordTemplate.h
